<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- App Intro Strings -->

    <string name="app_title"> Jazz Music Player</string>
    <string name="app_description">
        A Beautifully crafted app to play our music and to customize your experience while listening to the music, it has so many features bundled into one app which
        performs all the necessity of a music lover and singer.
    </string>

    <!-- ends -->
    <string name="app_name">Jazz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="no_results">No results</string>
    <string name="play">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="biography">Biography</string>
    <string name="biography_unavailable">Couldn\u2019t find a biography entry for this artist.</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="play_next">Play next</string>
    <string name="new_playlist">New playlist</string>
    <string name="share">Share</string>
    <string name="delete_from_device">Delete from device</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="menu_show_lyrics">Show lyrics</string>
    <string name="no_lyrics">No lyrics found.</string>
    <string name="lyrics_makeitpersonal">Powered by <a href="https://makeitpersonal.co/">makeitpersonal.co</a></string>
    <string name="lyrics_loading">Loading...</string>

    <string name="no_artists">No Artists</string>
    <string name="no_albums">No Albums</string>
    <string name="no_genres">No Genres</string>
    <string name="no_miniTracks">No MiniTracks</string>
    <string name="no_video_albums">No Video Albums</string>
    <string name="no_songs">No Tracks</string>
    <string name="no_songs_queue">No songs in queue</string>
    <string name="personalisation">Personalisation</string>
    <string name="other">Other</string>

    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_summary">Apply a dark theme throughout the app</string>

    <string name="primary_color">Primary Color</string>
    <string name="primary_color_summary">Change the primary theme color</string>

    <string name="accent_color">Accent Color</string>
    <string name="accent_color_summary">Change the accent theme color</string>

    <string name="colored_status_bar">Colored Status Bar</string>
    <string name="colored_status_bar_summary">Toggle status bar coloring</string>

    <string name="colored_nav_bar">Colored Navigation Bar</string>
    <string name="colored_nav_bar_summary">Toggle navigation bar coloring</string>

    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>

    <string name="playlist_last_added">Last Added</string>
    <string name="playlist_recently_played">Recently Played</string>
    <string name="playlist_top_tracks">My Top Tracks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_playing_track">Error Playing track</string>
    <string name="text_collapse_me">Collapse Me</string>
    <string name="text_welcome_message">Welcome to Android Tutorials Hub</string>
    <string name="text_expand_me">Expand Me</string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>

    <string name="count_song"><xliff:g id="count">%d</xliff:g> song</string>
    <string name="count_songs"><xliff:g id="count">%d</xliff:g> songs</string>
    <string name="count_album"><xliff:g id="count">%d</xliff:g> album</string>
    <string name="count_albums"><xliff:g id="count">%d</xliff:g> albums</string>
    <string name="count_artist"><xliff:g id="count">%d</xliff:g> artist</string>
    <string name="count_artists"><xliff:g id="count">%d</xliff:g> artists</string>

    <string name="number_song_add_queue"><xliff:g example="1" id="number">%d</xliff:g> song added to the queue.</string>
    <string name="number_songs_add_queue"><xliff:g example="1" id="number">%d</xliff:g> songs added to the queue.</string>
    <string name="number_song_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> song added to playlist.</string>
    <string name="number_songs_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> songs added to playlist.</string>

    <string name="songs">Tracks</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="video">Videos</string>
    <string name="minitracks">Mini Tracks</string>
    <string name="library">Library</string>
    <string name="playlists">Playlists</string>
    <string name="playing_queue">Playing Queue</string>
    <string name="now_playing">Now Playing</string>
    <string name="driver_mode">Driver Mode</string>
    <string name="music_tools">Music Tools</string>
    <string name="record">Record</string>
    <string name="find_duplicate">Find Duplicate</string>
    <string name="timer">Timer</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="search">Search</string>
    <string name="action_shuffle_all">Shuffle All</string>
    <string name="action_equalizer">Equalizer</string>
    <string name="search_library">Search Library</string>

    <string name="nothing_found">Nothing found</string>
    <string name="folders">Folders</string>
    <string name="select_storage">Select storage</string>
    <string name="video_list">Videos</string>

    <string name="combine_two_strings" translatable="false">%1$s | %2$s</string>

    <string name="menu_sort_by">Sort by</string>
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_track_number">Track Number</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_date_added">Date added</string>
    <string name="sort_order_entry_track_list">Track list</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>
    <string name="sort_order_entry_number_of_albums">Number of albums</string>
    <string name="sort_order_entry_filename">Filename</string>

    <string name="menu_show_as">View As</string>
    <string name="menu_show_as_entry_list">List</string>
    <string name="menu_show_as_entry_grid">Grid</string>
    <string name="menu_show_as_entry_default">Default</string>

    <string name="x_has_been_set_as_ringtone">Set %1$s as your ringtone.</string>

    <!-- Tag editor values -->
    <string name="song">Song</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="track_hint">"Track (2 for track 2 or 3004 for CD3 track 4)"</string>
    <string name="lyrics">Lyrics</string>
    <string name="year">Year</string>
    <string name="cut">Cut</string>
    <string name="tag_editor">Tag editor</string>
    <string name="saving_changes">Saving changes</string>
    <string name="saving_to_file">Saving to file…</string>
    <string name="scanned_files">Scanned %1$d of %2$d files.</string>
    <string name="could_not_scan_files">Could not scan %d files.</string>
    <string name="web_search">Web search</string>
    <string name="download_from_last_fm">Download from Last.fm</string>
    <string name="pick_from_local_storage">Pick from local storage</string>
    <string name="remove_cover">Remove cover</string>
    <string name="update_image">Update image</string>

    <!-- Ringdroid values -->
    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_button">Save</string>

    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>

    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Ringdroid can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>

    <string name="time_seconds">seconds</string>
    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>
    <string name="record_error">Error recording audio</string>
    <string name="play_error">Unable to play this media file</string>

    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>

    <string name="edit_intent">Edit</string>

    <!-- Music edit menu -->
    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>

    <!--
     File Save dialog
     -->
    <string name="type_music">Music</string>
    <string name="type_alarm">Alarm</string>
    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>
    <string name="ringtone_name_label">Name:</string>
    <string name="ringtone_type_label">Type:</string>

    <string name="no_unique_filename">Unable to find unique filename</string>

    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
    <string name="artist_name">Jazz</string>

    <!-- After you save a notification or ringtone and have more options
         for what to do with them -->
    <string name="what_to_do_with_ringtone">Saved!  Make this your default ringtone or assign it to a contact?</string>
    <string name="set_default_notification">Saved!  Make this your default notification?</string>

    <string name="make_default_ringtone_button">Make Default</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="do_nothing_with_ringtone_button">Close</string>
    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_notification_success_message">Changed default notification sound</string>

</resources>
