<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort_by"
        app:showAsAction="never"
        android:orderInCategory="50"
        android:title="@string/menu_sort_by">
        <menu>
            <item
                android:id="@+id/menu_sort_by_az"
                android:title="@string/sort_order_entry_az"/>
            <item
                android:id="@+id/menu_sort_by_za"
                android:title="@string/sort_order_entry_za"/>
            <item
                android:id="@+id/menu_sort_by_year"
                android:title="@string/sort_order_entry_year"
                android:visible="false"/>
            <item
                android:id="@+id/menu_sort_by_artist"
                android:title="@string/sort_order_entry_artist"
                android:visible="false"/>
            <item
                android:id="@+id/menu_sort_by_number_of_songs"
                android:title="@string/sort_order_entry_number_of_songs"
                android:visible="false"/>
        </menu>
    </item>

</menu>